--- a/lang/ar.json
+++ b/lang/ar.json
@@ -8,6 +8,9 @@
     "Chats": "المحادثات",
     "Private Coach": "مدرب خاص",
     "Select the private coach": "اختر المدرب الخاص",
+    "Personal Information": "المعلومات الشخصية",
+    "Content": "المحتوى",
+    "Diet Name": "اسم النظام الغذائي",
     "No private coach": "لا يوجد مدرب خاص",
     "Diets": "النظام الغذائي",
     "Diet": "نظام غذائي",
