--- a/lang/ar.json
+++ b/lang/ar.json
@@ -5,6 +5,8 @@
     "Trainee": "متدرب",
     "Plans": "الباقات",
     "Plan": "باقة",
+    "Admins": "المشرفين",
+    "Admin": "مشرف",
     "Chats": "المحادثات",
     "Private Coach": "مدرب خاص",
     "Select the private coach": "اختر المدرب الخاص",
