--- a/lang/ar.json
+++ b/lang/ar.json
@@ -5,6 +5,7 @@
     "Trainee": "متدرب",
     "Plans": "الباقات",
     "Plan": "باقة",
+    "Reports": "التقارير",
     "Admins": "المشرفين",
     "Admin": "مشرف",
     "Chats": "المحادثات",
