--- a/lang/ar.json
+++ b/lang/ar.json
@@ -6,6 +6,7 @@
     "Plans": "الباقات",
     "Plan": "باقة",
     "Reports": "التقارير",
+    "Trainee Info": "معلومات المدرب",
     "Admins": "المشرفين",
     "Admin": "مشرف",
     "Chats": "المحادثات",
